--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "axios": "^1.11.0",
     "formidable": "^3.5.4",
     "next": "15.4.4",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-image-gallery": "^1.4.0",
+    "react-select": "^5.10.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
