--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
     "react-select": "^5.10.2",
     "uuid": "^11.1.0"
