--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.10.2",
     "uuid": "^11.1.0"
   },
